--- a/tbh1.css
+++ b/tbh1.css
@@ -6,3 +6,62 @@ body{
     background-color:rgb(21, 24, 27);
     padding:20px;
 }
+img{
+    width:180px;
+    border-radius:50%;
+}
+.information{
+    margin-top:auto;
+    margin-bottom:auto;
+}
+p{
+    display:inline-block;
+    background:rgba(255, 255, 255, 0.2);
+    border-radius:20px;
+    margin:5px 0 5px 0;
+    padding:5px 10px 5px 10px;
+}
+.head{
+    display:grid;
+    grid-template-columns:180px 1fr;
+    grid-column-gap:20px;
+    background:rgba(0, 0, 0, 0.2);
+    border-radius:20px;
+    padding:20px 30px 20px 30px;
+}
+.index1, .index2, .index3, .index4{
+    background:rgba(0, 0, 0, 0.2);
+    height:100px;
+    text-align:center;
+}
+.content{
+    margin-top:25px;
+    display:grid;
+    grid-template-columns:1fr 1fr;
+    grid-gap:20px;
+   
+}
+.link{
+    color:black;
+}
+@media (max-width:1000px){
+    img{
+        width:350px
+    }
+    .head{
+        grid-template-columns:350px 1fr;
+        border-radius:50px;
+        padding:40px 60px 40px 60px;
+    }
+    p{
+        font-size:30px;
+        padding:10px 20px 10px 20px;
+        border-radius:50px;
+        margin:10px 0 10px 0;
+    }
+    .content{
+        margin-top:50px;
+        grid-gap:40px;
+        padding:20px;
+    }
+}
